disabled/dev/example-alb-ingress/example-alb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-alb-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
  labels:
    app: 2048-ingress
spec:
  rules:
    - host: 2048.dev.intranet.local
      http:
        paths:
          - path: /*
            backend:
              serviceName: service-2048
              servicePort: 80
    - host: helloworld.dev.intranet.local
      http:
        paths:
          - path: /*
            backend:
              serviceName: helloworld
              servicePort: 80
